@@ -84,7 +84,7 @@ load Coq object file
 and import it (Require Import filename.)
 
 .TP
-.BI \-compile \ filename
+.BI \-compile \ filename.v
 compile Coq file
 .I filename.v 
 (implies 
@@ -92,7 +92,7 @@ compile Coq file
 )
 
 .TP
-.BI \-compile\-verbose \ filename
+.BI \-compile\-verbose \ filename.v
 verbosely compile Coq file
 .I filename.v
 (implies 
